feat: Add Roslindale font and new partner SVGs, enhance layout and search components for improved user experience

--- a/app/assets/styles/main.css
+++ b/app/assets/styles/main.css
@@ -2,3 +2,7 @@ html,
 body {
     font-family: Roboto, Lato, sans-serif;
 }
+
+#layout-default>.n-layout-scroll-container>.n-layout>.n-scrollbar>.n-scrollbar-container>.n-scrollbar-content .n-layout>.n-scrollbar>.n-scrollbar-container>.n-scrollbar-content {
+    padding: 0 !important;
+}
